--- a/Areas/Customer/Views/Order/OrderDetails.cshtml
+++ b/Areas/Customer/Views/Order/OrderDetails.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container my-4">
-    <h3 class="text-center mb-4">Order Details for Order : @Model.OrderNo</h3>
+    <h4 class="text-center mb-4" style="font-size:25px">Order Details for Order : @Model.OrderNo</h4>
 
     <div class="row mb-4">
         <!-- Customer Information -->
