--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -4,149 +4,63 @@
     ViewData["Title"] = "Index";
 }
 
-<br />
-
-
-
-<div class="row">
-
-    <br />
-    <div class="col-lg-12">
-        <form method="post">
-            <div calss="row">
-                <h4>Product Filter with Range </h4>
-                <br />
-                <div class="col-lg-3">
-                    <input type="number" class="form-control" name="lowAmount" placeholder="Low Amount" />
-                </div>
-                <div class="col-lg-3">
-                    <input type="number" class="form-control" name="largeAmount" placeholder="Large Amount" />
-                </div>
-                <div class="col-lg-2">
-                    <button type="submit" class="btn btn-success">Search</button>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-2">
-                    @*   <a asp-action="SetDiscount" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Set Discount</a> *@
-
-                    <a asp-action="SetDiscount" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Set Discount</a>
-                </div>
-            </div>
-          
-        </form>
+<div class="container">
+    <div class="row">
+        <br />
+        <div class="col-lg-12 mt-3 ">
+            <h4 class="text-center" style="font-size:25px"> Product List</h4>
+        </div>
     </div>
-    <div class="col-lg-4">  </div>
-</div>
 
 
-
-<br />
-<div>
-    <table class=" display table table-striped border" id="myTable">
-        <thead>
-            <tr class="table-info">
-                <th>
-                    @Html.DisplayNameFor(c => c.Image)
-                </th>
-
-                <th>
-                    @Html.DisplayNameFor(c => c.Name)
-                </th>
-
-
-                <th>
-                    @Html.DisplayNameFor(c => c.Price)
-                </th>
-                
-                <th>
-                    @Html.DisplayNameFor(c => c.IsAvailable)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(c => c.ProductTypeId)
-                </th>
-               
-                <th>
-                    @Html.DisplayNameFor(c => c.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(c => c.Quantity)
-                </th>
-                <th>Action</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-
-                    <td><img src="~/@item.Image" style="max-width: 50px; max-height: 50px;" /></td>
-                    <td>@item.Name</td>
-                    <td>@item.Price</td>
-             
-                    <td>@item.IsAvailable</td>
-                    <td>@item.ProductTypes.ProductType</td>
-                 
-                    <td>@item.Description</td>
-                    <td>@item.Quantity</td>
-                    <td style="width: 150px">
-                        <div class="btn-group">
-                         
-                            <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id"><i class="fas fa-list-ul"></i></a>
-                            <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">
-                                <i class="fas fa-trash-alt"></i>
-                            </a>
-                        </div>
-                    </td>
+    <div>
+        <table class="display table table-striped border" id="myTable">
+            <thead>
+                <tr class="table-info">
+                    <th>@Html.DisplayNameFor(c => c.Image)</th>
+                    <th>@Html.DisplayNameFor(c => c.Name)</th>
+                    <th>@Html.DisplayNameFor(c => c.Price)</th>
+                    <th>@Html.DisplayNameFor(c => c.IsAvailable)</th>
+                    <th>@Html.DisplayNameFor(c => c.ProductTypeId)</th>
+                    <th>@Html.DisplayNameFor(c => c.Quantity)</th>
+                    <th>Action</th>
                 </tr>
-            }
-        </tbody>
-
-
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td><img src="~/@item.Image" style="max-width: 50px; max-height: 50px;" /></td>
+                        <td>@item.Name</td>
+                        <td>@item.Price</td>
+                        <td>@item.IsAvailable</td>
+                        <td>@item.ProductTypes.ProductType</td>
+                        <td>@item.Quantity</td>
+                        <td style="width: 150px">
+                            <div class="btn-group">
+                                <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id"><i class="fas fa-list-ul"></i></a>
+                                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id"><i class="fas fa-trash-alt"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
 
-<script>
-    $(document).ready(function () {
-        $('#myTable').DataTable();
-    });
-</script>
+
 
 @section scripts{
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.2/build/alertify.min.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.dataTables.css" />
-
     <script src="https://cdn.datatables.net/2.0.1/js/dataTables.js"></script>
 
-
     <script type="text/javascript">
-
-   
         $(document).ready(function () {
-                $('#myTable').DataTable({
-            //         dom: 'Bfrtip',
-            //         buttons: [
-            //             'pageLength', 'copy', 'csv', 'excel', 'pdf', 'print'
-            //         ]
+            $('#myTable').DataTable();
+        });
 
-             });
-       
-        $(function () {
-            var save = '@TempData["save"]'
-            if (save != '') {
-                alertify.success(save);
-            }
-            var edit = '@TempData["edit"]'
-            if (edit != '') {
-                alertify.success(edit);
-            }
-            var del = '@TempData["delete"]'
-            if (del != '') {
-                alertify.error(del);
-            }
-        })
+  
     </script>
-}
-
-
-
+    }
