--- a/Areas/Customer/Views/User/Delete.cshtml
+++ b/Areas/Customer/Views/User/Delete.cshtml
@@ -3,99 +3,68 @@
 @{
     ViewData["Title"] = "Delete";
 }
-<br />
 
-<h2 class="text-info">Delete user</h2>
-<form asp-action="Delete" method="post" id="user-form" enctype="multipart/form-data">
-    <div class="p-4 rounded border">
-        <div asp-validation-summary="ModelOnly" class="text-danger">
-        </div>
-        <input type="hidden" asp-for="Id" value="@Model.Id" />
-        <h3>@ViewBag.message</h3>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="UserName"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="UserName" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
+<div class="d-flex justify-content-center">
+    <div class="col-12 col-md-8 col-lg-6">
+        <h4 class="text-info text-center">Delete User</h4>
+        <br />
+        <form asp-action="Delete" method="post" id="user-form" enctype="multipart/form-data">
+            <div class="p-4 rounded border">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" value="@Model.Id" />
+                <h3 class="text-center">@ViewBag.message</h3>
 
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="Email"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="Email" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+                <div class="form-group row">
+                    <label asp-for="UserName" class="col-4 col-form-label"></label>
+                    <div class="col-8">
+                        <input asp-for="UserName" class="form-control" readonly />
+                    </div>
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
 
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="PhoneNumber"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="PhoneNumber" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-        </div>
+                <div class="form-group row">
+                    <label asp-for="Email" class="col-4 col-form-label"></label>
+                    <div class="col-8">
+                        <input asp-for="Email" class="form-control" readonly />
+                    </div>
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
 
+                <div class="form-group row">
+                    <label asp-for="PhoneNumber" class="col-4 col-form-label"></label>
+                    <div class="col-8">
+                        <input asp-for="PhoneNumber" class="form-control" readonly />
+                    </div>
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
 
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="FirstName"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="FirstName" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="FirstName" class="text-danger"></span>
-        </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="LastName"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="LastName" class="form-control" readonly="readonly" />
-            </div>
-            <span asp-validation-for="LastName" class="text-danger"></span>
-        </div>
+                <div class="form-group row">
+                    <label asp-for="FirstName" class="col-4 col-form-label"></label>
+                    <div class="col-8">
+                        <input asp-for="FirstName" class="form-control" readonly />
+                    </div>
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
 
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Delete" />
+                <div class="form-group row">
+                    <label asp-for="LastName" class="col-4 col-form-label"></label>
+                    <div class="col-8">
+                        <input asp-for="LastName" class="form-control" readonly />
+                    </div>
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
 
-            <a asp-action="Index" class="btn btn-success">Back to List</a>
-        </div>
+                <div class="form-group text-center">
+                    <input type="submit" class="btn btn-primary" value="Delete" />
+                    <a asp-action="Index" class="btn btn-success">Back to List</a>
+                </div>
+            </div>
+        </form>
     </div>
-</form>
+</div>
 
-@section Scripts{
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-
-    <script>
-        $(document).ready(function () {
-            $("#user-form").validate({
-                rules: {
-                    UserName: {
-                        required: true,
-                    },
-                    PasswordHash: {
-                        required: true,
-                    }
-                },
-                messages: {
-                    UserName: "Enter your UserName",
-                    PasswordHash: "Enter your password"
-                }
-
-            });
-        });
-    </script>
 }
-
-
-
-
