--- a/Areas/Customer/Views/User/Details.cshtml
+++ b/Areas/Customer/Views/User/Details.cshtml
@@ -2,152 +2,107 @@
 @{
     ViewData["Title"] = "Details";
 }
-<br />
 
-<div class="row">
-   
-    <div class="col-lg-12">
+<div class="container mt-7" style="margin-top:18px">
+<div class="d-flex justify-content-center mt-7">
+    <div class="card  text-center justify-content-center" style="width:700px;">
+        <div class="card-header">
+            <h4 class="card-title text-info"> User Details</h4>
+        </div>
+        <div class="card-body">
+            <form asp-action="Details" method="post" id="user-form" enctype="multipart/form-data">
+                <div>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" value="@Model.Id" />
+                    <h3>@ViewBag.message</h3>
 
-        <div class="card">
-            <div class="card-header">
-                <h2 class="card-title text-info">Edit User</h2>
-            </div>
-            <div class="card-body">
-                <form asp-action="Details" method="post" id="user-form" enctype="multipart/form-data">
-                    <div>
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="Id" value="@Model.Id" />
-                        <h3>@ViewBag.message</h3>
-                        
-                        <div class="row">
-                            <div class="col-lg-8">
-
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="UserName"></label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="UserName" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="UserName" class="text-danger"></span>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="Email"></label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="Email" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-
-
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="FirstName"></label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="FirstName" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="LastName"></label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="LastName" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="PhoneNumber"></label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="PhoneNumber" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="DateOfBirth">Date of Birth</label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="DateOfBirth" type="date" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                </div>
-                <div class="form-group row">
-                    <div class="col-3">
-                        <label asp-for="Address">Address</label>
-                    </div>
-                    <div class="col-5">
-                        <input asp-for="Address" class="form-control" readonly="readonly" />
-                    </div>
-                    <span asp-validation-for="Address" class="text-danger"></span>
-                </div>
-
-            </div>
-                            <div class="col-lg-4">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <div class="form-group">
-                                    <label asp-for="ProfilePicture" style="width: 100%; border-bottom:4px"></label>
-                                    @if (Model.ProfilePicture != null)
-                                    {
-                                        <img id="profilePicture" style="width:200px;height:200px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.ProfilePicture))">
-                                    }
-                                    else
-                                    {
-                                        <img id="profilePicture" style="width:200px;height:200px; object-fit:cover" src="">
-                                    }
-                                   </div>
-
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <div class="form-group row">
+                                <label asp-for="UserName" class="col-3 col-form-label"></label>
+                                <div class="col-9">
+                                    <input asp-for="UserName" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="UserName" class="text-danger"></span>
                             </div>
 
-                        </div>
-                        <br />
+                            <div class="form-group row">
+                                <label asp-for="Email" class="col-3 col-form-label"></label>
+                                <div class="col-9">
+                                    <input asp-for="Email" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
 
-                        <div class="form-group">
-                            <input type="submit" class="btn btn-primary" value="Update" />
-                            <a asp-action="Index" class="btn btn-success">Back to List</a>
+                            <div class="form-group row">
+                                <label asp-for="FirstName" class="col-3 col-form-label"></label>
+                                <div class="col-9">
+                                    <input asp-for="FirstName" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="FirstName" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row">
+                                <label asp-for="LastName" class="col-3 col-form-label"></label>
+                                <div class="col-9">
+                                    <input asp-for="LastName" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="LastName" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row">
+                                <label asp-for="PhoneNumber" class="col-3 col-form-label"></label>
+                                <div class="col-9">
+                                    <input asp-for="PhoneNumber" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row">
+                                <label asp-for="DateOfBirth" class="col-3 col-form-label">Date of Birth</label>
+                                <div class="col-9">
+                                    <input asp-for="DateOfBirth" type="date" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                            </div>
+
+                            <div class="form-group row">
+                                <label asp-for="Address" class="col-3 col-form-label">Address</label>
+                                <div class="col-9">
+                                    <input asp-for="Address" class="form-control" readonly />
+                                </div>
+                                <span asp-validation-for="Address" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 d-flex justify-content-center align-items-center">
+                            <div class="text-center">
+                                <label asp-for="ProfilePicture"></label>
+                                @if (Model.ProfilePicture != null)
+                                {
+                                    <img id="profilePicture" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover;" src="data:image/*;base64,@(Convert.ToBase64String(Model.ProfilePicture))" />
+                                }
+                                else
+                                {
+                                    <img id="profilePicture" class="img-fluid rounded-circle" style="width: 200px; height: 200px; object-fit: cover;" src="" />
+                                }
+                            </div>
                         </div>
                     </div>
-                </form>
-            </div>
+                    <br />
+
+                    <div class="form-group">
+                       
+                        <a asp-action="Index" class="btn btn-success">Back to List</a>
+                    </div>
+                </div>
+            </form>
         </div>
-
-
     </div>
-    <div class="col-lg-2"></div>
+</div>
 </div>
 
-@section Scripts{
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-
-    <script>
-        $(document).ready(function () {
-            $("#user-form").validate({
-                rules: {
-                    UserName: {
-                        required: true,
-                    },
-                    PasswordHash: {
-                        required: true,
-                    }
-                },
-                messages: {
-                    UserName: "Enter your email",
-                    PasswordHash: "Enter your password"
-                }
-
-            });
-        });
-    </script>
 }
-
