--- a/Areas/Admin/Views/Role/Delete.cshtml
+++ b/Areas/Admin/Views/Role/Delete.cshtml
@@ -1,57 +1,29 @@
-﻿﻿@{
+﻿@{
     ViewData["Title"] = "Delete";
 }
-<br />
 
-<h3 class="text-info">Delte User</h3>
-<br />
-<form asp-action="Delete" method="post" id="role-form" enctype="multipart/form-data">
-    <div class="p-4 rounded border">
-        <div asp-validation-summary="ModelOnly" class="text-danger">
-        </div>
-        <h3>Do you want to delete ?</h3>
-        <div class="form-group row">
-            <div class="col-2">
-                <label>Role Name</label>
+<div class="d-flex justify-content-center mt-5">
+    <div class="col-12 col-md-8 col-lg-6">
+        <h4 class="text-info text-center">Delete Role</h4>
+        <br />
+        <form asp-action="Delete" method="post" id="role-form" enctype="multipart/form-data">
+            <div class="p-4 rounded border">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <h4 class="text-center">Do you want to delete?</h4>
+
+                <div class="form-group row">
+                    <label for="name" class="col-4 col-form-label text-right">Role Name</label>
+                    <div class="col-8">
+                        <input type="hidden" value="@ViewBag.id" name="id" />
+                        <input id="name" readonly="readonly" name="name" required="required" value="@ViewBag.name" class="form-control" />
+                    </div>
+                </div>
+
+                <div class="form-group text-center mt-4">
+                    <input type="submit" class="btn btn-primary" value="Delete" />
+                    <a asp-action="Index" class="btn btn-success">Back to List</a>
+                </div>
             </div>
-            <input type="hidden" value="@ViewBag.id" name="id" />
-            <div class="col-5">
-                <input id="name" readonly="readonly" name="name" required="required" value="@ViewBag.name" class="form-control" />
-            </div>
-
-        </div>
-
-
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Delete" />
-            <a asp-action="Index" class="btn btn-success">Back to List</a>
-        </div>
+        </form>
     </div>
-</form>
-
-@section Scripts{
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-
-    <script>
-        $(document).ready(function () {
-            $("#user-form").validate({
-                rules: {
-                    UserName: {
-                        required: true,
-                    },
-                    PasswordHash: {
-                        required: true,
-                    }
-                },
-                messages: {
-                    UserName: "Enter your userName",
-                    PasswordHash: "Enter your password"
-                }
-
-            });
-        });
-    </script>
-}
-
+</div>
