--- a/Areas/Customer/Views/User/Index.cshtml
+++ b/Areas/Customer/Views/User/Index.cshtml
@@ -17,7 +17,7 @@
 </div>
 <br />
 <div>
-    <table class="table table-striped border">
+    <table class="table table-striped border" id="myTable">
         <tr class="table-info">
             <th>
                 Name
@@ -80,27 +80,15 @@
 </div>
 </div>
 
-@section scripts{
+@section scripts {
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.2/build/alertify.min.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            var save = '@TempData["save"]'
-            if (save != '') {
-                alertify.success(save);
-            }
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.dataTables.css" />
+    <script src="https://cdn.datatables.net/2.0.1/js/dataTables.js"></script>
 
-            var locout = '@TempData["locout"]'
-            if (save != '') {
-                alertify.success(lockout);
-            } 
-            var edit = '@TempData["edit"]'
-            if (edit != '') {
-                alertify.success(edit);
-            }
-            var del = '@TempData["delete"]'
-            if (del != '') {
-                alertify.error(del);
-            }
-        })
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+
     </script>
 }
