--- a/Areas/Customer/Views/User/Index.cshtml
+++ b/Areas/Customer/Views/User/Index.cshtml
@@ -1,94 +1,73 @@
-﻿﻿@using OnlineShop.Models;
+﻿@using OnlineShop.Models;
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<IdentityUser> _userManager
 @model IEnumerable<ApplicationUser>
+
 @{
     ViewData["Title"] = "Index";
 }
-<div class="container">
 
-<div class="row mt-2">
-    <div class="col-lg-12">
-        <h4  style="font-size:25px"class="text-info text-center">User List</h4>
-    </div>
-   @*  <div class="col-lg-6 text-right">
+<div class="container mt-2">
+
+    <a href="javascript:history.back()" class="btn btn-secondary mb-2">
+        <i class="fa fa-arrow-left"></i> Back
+    </a>
+    <div class="row mt-2">
+        <div class="col-lg-12">
+            <h4 style="font-size:20px" class="text-info text-center">Application User List</h4>
+        </div>
+        @* Uncomment this if you want to add a "New User" button *@
+        @* <div class="col-lg-6 text-right">
         <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; New User</a>
-    </div> *@
-</div>
-<br />
-<div>
-    <table class="table table-striped border" id="myTable">
-        <tr class="table-info">
-            <th>
-                Name
-            </th>
-            <th>
-                UserName
-            </th>
-            <th>Email</th>
-            <th>Phone Number</th>
-           <th>Role</th>
-            <th>Status</th>
-            <th></th>
-            <td></td>
-            <td></td>
-           
-            <th></th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            var userRoles = await _userManager.GetRolesAsync(item);
-            var roles = string.Join(", ", userRoles);
-            <tr>
-                <td>@item.FirstName @item.LastName</td>
-                <td>@item.UserName</td>
-                <td>@item.Email</td>
-                <td>@item.PhoneNumber</td>
-                <td>@roles</td>
-                @if (item.LockoutEnd > DateTime.Now && item.LockoutEnd != null)
+        </div> *@
+    </div>
+    <br />
+    <div>
+        <table class="table table-striped border" id="userTable">
+            <thead>
+                <tr class="table-info">
+                    <th>Name</th>
+                    <th>UserName</th>
+                    <th>Email</th>
+                    <th>Phone Number</th>
+                    <th>Role</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
                 {
-                    <td >Inactive </td>
-                    <td></td>
-                  
-                    <td >
-                        <div class="btn-group">
-                            <a asp-action="Active" class="btn btn-primary" asp-route-id="@item.Id">
-                                <i class="far fa-edit"></i>
-                            </a>
-                           
-                        </div>
-
-                    </td>
-
+                    var userRoles = await _userManager.GetRolesAsync(item);
+                    var roles = string.Join(", ", userRoles);
+                    <tr>
+                        <td>@item.FirstName @item.LastName</td>
+                        <td>@item.UserName</td>
+                        <td>@item.Email</td>
+                        <td>@item.PhoneNumber</td>
+                        <td>@roles</td>
+                        @if (item.LockoutEnd > DateTime.Now && item.LockoutEnd != null)
+                        {
+                            <td>Inactive</td>
+                            <td>
+                                <div class="btn-group">
+                                    <a asp-action="Active" class="btn btn-primary" asp-route-id="@item.Id">
+                                        <i class="far fa-edit"></i>
+                                    </a>
+                                </div>
+                            </td>
+                        }
+                        else
+                        {
+                            <td>Active</td>
+                            <td style="width: 150px">
+                                <partial name="_PartialView" model="@item.Id" />
+                            </td>
+                        }
+                    </tr>
                 }
-                else
-                {
-                    <td>Active</td>
-                    <td style="width: 150px">
-                        <partial name="_PartialView" model="@item.Id" />
-                    </td>
-
-                }
-
-                <td></td>
-               
-                
-
-            </tr> 
-        }
-    </table>
-</div>
+            </tbody>
+        </table>
+    </div>
 </div>
 
-@section scripts {
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.2/build/alertify.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.dataTables.css" />
-    <script src="https://cdn.datatables.net/2.0.1/js/dataTables.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#myTable').DataTable();
-        });
-
-    </script>
-}
