--- a/Areas/Customer/Views/User/Index.cshtml
+++ b/Areas/Customer/Views/User/Index.cshtml
@@ -16,14 +16,14 @@
         <div class="col-lg-12">
             <h4 style="font-size:20px" class="text-info text-center">Application User List</h4>
         </div>
-        @* Uncomment this if you want to add a "New User" button *@
+        @*  "New User" button *@
         @* <div class="col-lg-6 text-right">
         <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; New User</a>
         </div> *@
     </div>
     <br />
     <div>
-        <table class="table table-striped border" id="userTable">
+        <table class="table table-responsive" id="myTable">
             <thead>
                 <tr class="table-info">
                     <th>Name</th>
@@ -70,4 +70,5 @@
         </table>
     </div>
 </div>
+
 
