--- a/Areas/Admin/Views/ProductPrice/Index.cshtml
+++ b/Areas/Admin/Views/ProductPrice/Index.cshtml
@@ -3,33 +3,69 @@
 @{
     ViewBag.Title = "Product Prices";
 }
-<br />
-<h3>Product Prices</h3>
-<br />
-@foreach (var group in Model)
-{
-    <h3 class="text-center">@group.Key</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Product Name</th>
-                <th>Price</th>
-                <th>Updated Date</th>
-                <th>Edit</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in group)
-            {
-                <tr>
-                    <td>@item.ProductName</td>
-                    <td>@item.Price Tk</td>
-                    <td>@item.UpdatedDate.ToString("g")</td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+
+<div class="container mt-4">
+    <h4 class="text-center text-info mb-4">Product Prices</h4>
+    <div class="text-right"> <a class="btn btn-info text-right " asp-action="Create" asp-controller="ProductPrice" asp-area="Admin" class="btn ">Create New</a></div>
+    @foreach (var group in Model)
+    {
+        <h4 class="text-center  mb-3">@group.Key</h4>
+
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Updated Date</th>
+                        <th scope="col">Edit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in group)
+                    {
+                        <tr>
+                            <td>@item.ProductName</td>
+                            <td>@item.Price Tk</td>
+                            <td>@item.UpdatedDate.ToString("g")</td>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn ">Edit</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    }
+</div>
+
+
+    <style>
+
+        h3 {
+            font-size: 1.75rem;
+            font-weight: 500;
+        }
+
+        h4 {
+            font-size: 1.2rem;
+            font-weight: 400;
+        }
+
+        table th, table td {
+            font-size: 1rem;
+        }
+
+/
+        .btn-primary {
+            font-size: 0.9rem;
+            padding: 0.375rem 0.75rem;
+        }
+
+
+        .small-font-size {
+            font-size: 0.875rem;
+        }
+
+        
+    </style>
