--- a/Areas/Customer/Views/Blog/Create.cshtml
+++ b/Areas/Customer/Views/Blog/Create.cshtml
@@ -1,28 +1,38 @@
 ﻿@model OrganicOption.Models.Blogs.BlogPost
-<br />
-<div class="container">
-    <h4>Create Blog Post</h4>
-    <form asp-action="Create" enctype="multipart/form-data">
-        <div class="form-group">
-            <label asp-for="Title" class="control-label"></label>
-            <input asp-for="Title" class="form-control" />
-            <span asp-validation-for="Title" class="text-danger"></span>
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8 col-sm-10">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h4 class="card-title text-center mb-4">Create Blog Post</h4>
+                    <form asp-action="Create" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label asp-for="Title" class="control-label"></label>
+                            <input asp-for="Title" class="form-control" />
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="ShortDescription" class="control-label"></label>
+                            <textarea asp-for="ShortDescription" class="form-control"></textarea>
+                            <span asp-validation-for="ShortDescription" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="FullDescription" class="control-label"></label>
+                            <textarea asp-for="FullDescription" class="form-control"></textarea>
+                            <span asp-validation-for="FullDescription" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="Image">Image</label>
+                            <input type="file" name="image" class="form-control" />
+                            <span asp-validation-for="Image" class="text-danger"></span>
+                        </div>
+                        <div class="text-center mt-3">
+                            <button type="submit" class="btn btn-primary px-4">Create</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label asp-for="ShortDescription" class="control-label"></label>
-            <textarea asp-for="ShortDescription" class="form-control"></textarea>
-            <span asp-validation-for="ShortDescription" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="FullDescription" class="control-label"></label>
-            <textarea asp-for="FullDescription" class="form-control"></textarea>
-            <span asp-validation-for="FullDescription" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label for="Image">Image</label>
-            <input type="file" name="image" class="form-control" />
-            <span asp-validation-for="Image" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Create</button>
-    </form>
+    </div>
 </div>
