Feedback UI Modification

--- a/Areas/Customer/Views/Feedback/Index.cshtml
+++ b/Areas/Customer/Views/Feedback/Index.cshtml
@@ -4,25 +4,56 @@
     ViewData["Title"] = "Feedback List";
 }
 <br />
-<h3>@ViewData["Title"]</h3>
+<h3 class="text-center">@ViewData["Title"]</h3>
 <br />
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Comment</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="container">
+    <table id="myTable" class="table table-responsive table-striped">
+        <thead>
             <tr>
-                <td>@item.Name</td>
-                <td>@item.Email</td>
-                <td>@item.Comment</td>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Comment</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Name</td>
+                    <td>@item.Email</td>
+                    <td>@item.Comment</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+
+<style>
+    .table {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .dataTables_wrapper .dataTables_paginate .paginate_button {
+        padding: 0.5em 1em;
+        margin: 0.5em;
+    }
+</style>
+
+@section scripts {
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.dataTables.css" />
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/2.0.1/js/dataTables.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            // Initialize DataTable on the table element
+            $('#myTable table').DataTable();
+        });
+    </script>
+}
