--- a/Areas/Customer/Views/UserProfile/Deshboard.cshtml
+++ b/Areas/Customer/Views/UserProfile/Deshboard.cshtml
@@ -155,6 +155,9 @@
                             <dt class="col-sm-4">Other Setting:</dt>
                             <dd class="col-sm-8">   <a asp-area="Identity" class="btn btn-danger" style="margin-left:10px" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a> </dd>
 
+                            <dt class="col-sm-4">Feed back:</dt>
+                            <dd class="col-sm-8">  <a asp-action="Index" asp-area="Customer" asp-controller="Feedback" class="btn btn-info"><i class="fas fa-plus"></i> Feedback manage list</a></dd>
+
                             <dt class="col-sm-4">Discount:</dt>
                             <dd class="col-sm-8">  <a asp-action="SetDiscount" asp-area="Admin" asp-controller="Products" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Set Discount</a></dd>
                         }
