Access Denied page UI

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -292,7 +292,7 @@
                                             </form>
                                         </div>
                                     </li>
-                                    @if (userRole != "Customer" && userRole != "Rider" && userRole != "Admin" && userRole != "Farmer")
+                                    @if (userRole != "Customer" && userRole != "Rider" && userRole != "Admin" && userRole != "Farmer" && userRole != "SuperAdmin")
                                     {
                                         <li class="nav-item" style="margin-left:115px; position: relative;">
                                           
