--- a/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,22 @@
-﻿@page
+﻿
+@page
 @model AccessDeniedModel
 @{
     ViewData["Title"] = "Access denied";
 }
 
-<header>
-    <h3 class="text-danger">@ViewData["Title"]</h3>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+<div class="container text-center my-5">
+    <img src="~/img/bg/access.png" alt="Access Denied" class="img-fluid mb-4" style="max-width: 200px;">
+    <header>
+        <h3 class="text-danger" style="font-size: 2rem;">@ViewData["Title"]</h3>
+        <p class="text-danger" style="font-size: 1.25rem;">You do not have access to this resource.</p>
+    </header>
+    <div class="mt-4">
+        <a href="javascript:history.back()" class="btn btn-outline-primary btn-lg me-3">
+            <i class="bi bi-arrow-left"></i> Back
+        </a>
+        <a href="/" class="btn btn-primary btn-lg">
+            <i class="bi bi-house-door"></i> Home
+        </a>
+    </div>
+</div>
