Blog footer blog and social link set

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -522,59 +522,36 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-5">
                         <div class="widgets_container contact_us">
-                            <a href="index.html"><img src="/img/logo/online-shoping.png" alt=""></a>
+                            <a href="index.html"><img src="/img/logo/online-shoping.png" alt="Logo" class="img-fluid mb-4"></a>
                             <div class="footer_contact">
-                                <ul>
-                                    <li><i class="zmdi zmdi-home"></i><span>Addresss:</span> Khlishpur Khulna</li>
-                                    <li><i class="zmdi zmdi-phone-setting"></i><span>Phone:</span> 01568105212<a href="01568105212"</a> </li>
-                                    <li><i class="zmdi zmdi-email"></i><span>Email:</span>  info@OrganicOption.com</li>
+                                <ul class="list-unstyled">
+                                    <li><i class="zmdi zmdi-home"></i><span class="fw-bold"> Address:</span> Khlishpur, Khulna</li>
+                                    <li><i class="zmdi zmdi-phone-setting"></i><span class="fw-bold"> Phone:</span> <a href="tel:01568105212" style="text-decoration: none; color: inherit;">01568105212</a></li>
+                                    <li><i class="zmdi zmdi-email"></i><span class="fw-bold"> Email:</span> <a href="mailto:info@OrganicOption.com" style="text-decoration: none; color: inherit;">info@OrganicOption.com</a></li>
                                 </ul>
                             </div>
-                   
 
-                            <div style="display: flex; flex-wrap: wrap; gap: 10px;">
-                                <!-- Row 1 -->
-                                <div style="width: 10%;text-align: center;  margin-bottom: 10px;">
-                                    <a href="https://github.com/aminul-islam-niloy" title="Github" style="text-decoration: none; color: black;">
-                                        <i class="fa-brands fa-github" style="font-size: 20px;"></i>
-                                        <div style="margin-top: 5px;">
-                                            <p style="margin: 0;">Projects</p>
-                                            
-                                        </div>
-                                    </a>
-                                </div>
-                                <div style="width: 20%;text-align: center;  margin-bottom: 10px;">
-                                    <a href="https://www.linkedin.com/in/aminul-islam-niloy-78ba98167" title="X" style="text-decoration: none; color: black;">
-                                        <i class="fa-brands fa-linkedin" style="font-size: 20px;"></i>
-                                        <div style="margin-top: 5px;">
-                                            <p style="margin: 0;">Profile</p>
-                                         
-                                        </div>
-                                    </a>
-                                </div>
-                                <!-- Row 2 -->
-                                <div style="width: 20%;text-align: center;  margin-bottom: 10px;">
-                                    <a href="https://www.facebook.com/aminulislamniloy122/" title="Facebook" style="text-decoration: none; color: black;">
-                                        <i class="fa fa-facebook" style="font-size: 20px;"></i>
-                                        <div style="margin-top: 5px;">
-                                            <p style="margin: 0;">Find Us</p>
-                                          
-                                        </div>
-                                    </a>
-                                </div>
-                                <div style="width: 20%;text-align: center; margin-bottom: 10px;">
-                                    <a href="https://www.instagram.com/aminul_islam_122/?hl=en" title="Instagram" style="text-decoration: none; color: black;">
-                                        <i class="fa-brands fa-instagram" style="font-size: 20px;"></i>
-                                        <div style="margin-top: 5px;">
-                                            <p style="margin: 0;">Photos</p>
-                                            
-                                        </div>
-                                    </a>
-                                </div>
+                            <div class="social-links mt-4 d-flex flex-wrap justify-content-center">
+                                <a href="https://github.com/aminul-islam-niloy" title="Github" class="text-center" style="text-decoration: none; color: black; width: 60px;">
+                                    <i class="fa-brands fa-github" style="font-size: 20px;"></i>
+                                    <p class="mt-1 mb-0">Projects</p>
+                                </a>
+                                <a href="https://www.linkedin.com/in/aminul-islam-niloy-78ba98167" title="LinkedIn" class="text-center" style="text-decoration: none; color: black; width: 80px;">
+                                    <i class="fa-brands fa-linkedin" style="font-size: 20px;"></i>
+                                    <p class="mt-1 mb-0">Profile</p>
+                                </a>
+                                <a href="https://www.facebook.com/aminulislamniloy122/" title="Facebook" class="text-center" style="text-decoration: none; color: black; width: 80px;">
+                                    <i class="fa-brands fa-facebook" style="font-size: 20px;"></i>
+                                    <p class="mt-1 mb-0">Find Us</p>
+                                </a>
+                                <a href="https://www.instagram.com/aminul_islam_122/?hl=en" title="Instagram" class="text-center" style="text-decoration: none; color: black; width: 80px;">
+                                    <i class="fa-brands fa-instagram" style="font-size: 20px;"></i>
+                                    <p class="mt-1 mb-0">Photos</p>
+                                </a>
                             </div>
-
                         </div>
                     </div>
+
                     <div class="col-lg-5 col-md-7">
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
@@ -622,28 +599,28 @@
                             <div class="Latest_Posts_wrapper">
                                 <div class="single_Latest_Posts">
                                     <div class="Latest_Posts_thumb">
-                                        <a href="blog-details.html"><img src="assets/img/category/post1.jpg" alt=""></a>
+                                        <a href="blog-details.html"><img src="~/img/blog/71fb047f-bdf5-4721-ac18-a2cf825210c6_Organic-food banner.jpg" alt=""></a>
                                     </div>
                                     <div class="Latest_Posts_content">
-                                        <h3><a href="blog-details.html">Blog image post</a></h3>
+                                        <h3><a asp-action="Details" asp-area="Customer" asp-controller="Blog" asp-route-id="1">Blog image post</a></h3>
                                         <span><i class="zmdi zmdi-card-sd"></i> 10 August, 2024</span>
                                     </div>
                                 </div>
                                 <div class="single_Latest_Posts">
                                     <div class="Latest_Posts_thumb">
-                                        <a href="blog-details.html"><img src="assets/img/category/post2.jpg" alt=""></a>
+                                        <a href="blog-details.html"><img src="~/img/blog/maxresdefault.jpg" alt=""></a>
                                     </div>
                                     <div class="Latest_Posts_content">
-                                        <h3><a href="blog-details.html">Post with Gallery</a></h3>
+                                        <h3><a asp-action="Details" asp-area="Customer" asp-controller="Blog" asp-route-id="2">Blog image post</a></h3>
                                         <span><i class="zmdi zmdi-card-sd"></i> 10 August, 2024</span>
                                     </div>
                                 </div>
                                 <div class="single_Latest_Posts">
                                     <div class="Latest_Posts_thumb">
-                                        <a href="blog-details.html"><img src="assets/img/category/post3.jpg" alt=""></a>
+                                        <a href="blog-details.html"><img src="~/img/blog/wuan.jpg" alt=""></a>
                                     </div>
                                     <div class="Latest_Posts_content">
-                                        <h3><a href="blog-details.html">Post with Audio</a></h3>
+                                        <h3><a asp-action="Details" asp-area="Customer" asp-controller="Blog" asp-route-id="1">Blog image post</a></h3>
                                         <span><i class="zmdi zmdi-card-sd"></i> 10 August, 2024</span>
                                     </div>
                                 </div>
