Identity Nav Error Solve

--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -18,10 +18,11 @@
 
     var curren = await UserManager.GetUserAsync(User);
 }
-    <div>
+    <div class="container">
 
         <hr />
-        <h5> User Information  Edit</h5>
+        <h4> User Information  Edit</h4>
+        <br />
         <div class="row">
             <div class="col-md-3">
             <partial name="_ManageNav" /> 
